--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="docs/_media/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="keywords" content="doc,programming,dotnet,goodpractices,mvc,tips,geeks,geeksltd">
-  <meta name="description" content="Programming tips">
+  <meta name="description" content="WordUp Documentations">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
 </head>
@@ -35,12 +35,12 @@
       plugins: [
         function (hook, vm) {
           hook.beforeEach(function (html) {
-            var url = 'https://github.com/geeksltd/Programming.Tips/blob/master/' + vm.route.file
+            var url = 'https://github.com/RezaT4795/WordUp.Docs/blob/master/' + vm.route.file
             var editHtml = '[:memo: Edit Document](' + url + ')\n'
             return editHtml
              + html
              + '\n\n----\n\n'
-             + '<a href="https://www.geeks.ltd.uk/" target="_blank" style="color: inherit; font-weight: normal; text-decoration: none;">Powered by Geeks Ltd</a>'
+             + '<a href="https://www.wordupapp.co/" target="_blank" style="color: inherit; font-weight: normal; text-decoration: none;">Powered by WordUpApp</a>'
           })
         }
       ]
