--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>WordUp Documentations</title>
   <link rel="icon" href="docs/_media/favicon.ico">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="keywords" content="doc,programming,dotnet,goodpractices,mvc,tips,geeks,geeksltd">
+  <meta name="keywords" content="doc,wordup,testing,goodpractices,walkthrough,tips,geeks,geeksltd">
   <meta name="description" content="WordUp Documentations">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/vue.css">
