--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       mergeNavbar: true,
       maxLevel: 4,
       subMaxLevel: 2,
-      name: 'WordUp Documentations',
+      name: 'WordUp Docs',
       search: {
         noData: {
           '/': 'No results!'
