--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="doc,wordup,testing,goodpractices,walkthrough,tips,geeks,geeksltd">
   <meta name="description" content="WordUp Docs">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
+  <link rel="stylesheet" href="//unpkg.com/docsify/lib/themes/dark.css">
 </head>
 <body>
   <div id="app">Loading ...</div>
