--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <meta name="description" content="WordUp Docs">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css">
+  <style>
+    :root {
+      --base-font-size: 14px;
+      --theme-color   : indigo;
+    }
+  </style>
 </head>
 <body>
   <div id="app">Loading ...</div>
