--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style>
     :root {
       --base-font-size: 14px;
-      --theme-color   : indigo;
+      --theme-color   : #AE24F6;
     }
   </style>
 </head>
